# godot-egui

./: Cargo.toml  rust-toolchain.toml
egui-stylist/: Cargo.toml
egui-stylist-native/: Cargo.toml
egui-stylist/src/views/preview/: widget_gallery.rs
egui-theme/: Cargo.toml  build.rs
egui_stylist_addon/: Cargo.toml
egui_stylist_addon/src/: stylist.rs
example_project/: Cargo.toml
example_project/src/: lib.rs  window.rs
godot_egui/: Cargo.toml
godot_egui/src/: ext.rs  lib.rs
