[workspace]
members = [
  "egui_stylist_addon",
  "egui-stylist-native",
  "egui-stylist",
  "egui-theme",
  "example_project",
  "godot_egui",
]

[workspace.dependencies]
cargo_toml = "0"
cargo-lock = "8"
egui = "0.21"
egui_demo_lib = "0.21"
gdnative = "0.11"
ron = "0.8"
serde = "1"
serde_json = "1"
eframe = "0.21"
base64 = "0.21"
rfd = "0.11"

futures = "0.3"

egui-theme = { path = "./egui-theme", version = "0.2" }
egui-stylist = { path = "./egui-stylist", version = "0.2" }
godot_egui = { path = "./godot_egui", version = "0.2" }

[profile.dev.package.egui-stylist]
opt-level = 3

[profile.dev.package.egui-stylist-native]
opt-level = 3

[profile.dev.package.egui-theme]
opt-level = 3

[profile.release.package.egui-stylist]
opt-level = 2 # fast and small wasm

[profile.release.package.egui-stylist-native]
opt-level = 2 # fast and small wasm

[profile.release.package.egui-theme]
opt-level = 2 # fast and small wasm
