[package]
name = "godot_egui_stylist"
version = "0.2.0"
authors = ["Jacobsky"]
publish = false
edition = "2021"
workspace = ".."

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { workspace = true }
egui = { workspace = true }
godot_egui = { workspace = true, features = ["theme_support"] }
egui-theme = { workspace = true }
egui-stylist = { workspace = true }

ron = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
