[package]
name = "godot_egui_example"
version = "0.2.0"
authors = ["Setzer22", "Jacobsky"]
publish = false
edition = "2021"
workspace = ".."

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { workspace = true }
egui = { workspace = true }
egui_demo_lib = { workspace = true }
godot_egui = { workspace = true }
