[package]
name = "godot_egui"
description = "Egui backend for the Godot Engine"
homepage = "https://github.com/setzer22/godot-egui"
repository = "https://github.com/setzer22/godot-egui"
license = "MIT"
version = "0.2.0"
authors = ["Setzer22", "Jacobsky"]
keywords = ["gamedev", "gui"]
edition = "2021"
readme = "../README.md"

[dependencies]
gdnative = { workspace = true }
egui = { workspace = true }
egui-theme = { workspace = true, optional = true }
ron = { workspace = true }

[features]
default = []
theme_support = ["dep:egui-theme"]
